src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>PBD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Primary Bank Details of the clients 1st Deposit</description>
        <inlineHelpText>The Primary Bank Details of the clients 1st Deposit</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>apartment__c</fullName>
        <label>Apartment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>calculated_risk_points__c</fullName>
        <description>Low = 8 to 15
Medium = 16 to 30
High = 31 to 40</description>
        <inlineHelpText>Low = 8 to 15
Medium = 16 to 30
High = 31 to 40</inlineHelpText>
        <label>Calculated Risk Points</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>certified_funds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certify Funds Accordance With Informatio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>confirmed_all_terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed All Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deposited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>desired_investment_return__c</fullName>
        <label>Desired Annual Return</label>
        <picklist>
            <picklistValues>
                <fullName>LOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOW_MEDIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIUM_HIGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIGH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>University Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Finance Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>financial_markets__c</fullName>
        <label>Financial Markets</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>first_name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>house__c</fullName>
        <label>House</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>income__c</fullName>
        <label>Income</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50,000 - 75,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75,000 - 100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100,000 - 200,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Than 200,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>income_currency__c</fullName>
        <label>Income Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>initial_deposit_amount__c</fullName>
        <label>Initial Deposit Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>initial_deposit_currency__c</fullName>
        <label>Initial Deposit Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>intend_invest_currency__c</fullName>
        <label>Intend Invest Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>intended_invest__c</fullName>
        <label>Intended Invest</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>investment_currency__c</fullName>
        <label>Investment Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>investment_horizon__c</fullName>
        <label>Investment Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>VERY_SHORT_TERM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHORT_TERM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VERY_MEDIUM_TERM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIUM_TERM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LONG_TERM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>investment_objective__c</fullName>
        <label>Investment Objective</label>
        <picklist>
            <picklistValues>
                <fullName>Income Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth Income Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trading Speculation Investor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>investments__c</fullName>
        <label>investments</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50,000 - 75,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75,000 - 100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100,000 - 200,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Than 200,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ip_address__c</fullName>
        <label>IP Address</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ip_city__c</fullName>
        <label>City IP</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ip_country__c</fullName>
        <label>Country IP</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ip_region__c</fullName>
        <label>Region IP</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_political_person__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Political Person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_retail_investor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail Investor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_us_citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>United States Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>last_name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nationality__c</fullName>
        <label>Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newfield3000__c</fullName>
        <label>newfield3000</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>not_working_in_us_finance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Working In Us Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>occupation__c</fullName>
        <label>Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Political</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>passport_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passport Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>passport_reject_reason__c</fullName>
        <label>Passport Reject Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>passport_status__c</fullName>
        <label>Passport Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Provided</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>risk_tolerance__c</fullName>
        <label>Risk Tolerance</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>second_phone__c</fullName>
        <label>Second Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>stox_id__c</fullName>
        <label>Stox User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trading_with_shares__c</fullName>
        <label>Trading With Shares</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 1 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Than 3 Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>trading_with_shares_del__c</fullName>
        <label>Trading With Shares</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utility_bill_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Utility Bill Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>utility_bill_reject_reason__c</fullName>
        <label>Utility Bill Reject Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>utility_bill_status__c</fullName>
        <label>Utility Bill Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Provided</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>x18_digits_Id__c</fullName>
        <description>generates salesforce id with 18 digits to support id generated by API</description>
        <formula>Id &amp; 
MID( 
    &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
    MIN(FIND(MID(Id, 5, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
    MIN(FIND(MID(Id, 4, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
    MIN(FIND(MID(Id, 3, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
    MIN(FIND(MID(Id, 2, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
    MIN(FIND(MID(Id, 1, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
    1) &amp; 
MID( 
    &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
    MIN(FIND(MID(Id, 10, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
    MIN(FIND(MID(Id, 9, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
    MIN(FIND(MID(Id, 8, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
    MIN(FIND(MID(Id, 7, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
    MIN(FIND(MID(Id, 6, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
    1) &amp; 
MID( 
    &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
    MIN(FIND(MID(Id, 15, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
    MIN(FIND(MID(Id, 14, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
    MIN(FIND(MID(Id, 13, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
    MIN(FIND(MID(Id, 12, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
    MIN(FIND(MID(Id, 11, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
    1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digits Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>stox_id__c</columns>
        <columns>deposited__c</columns>
        <columns>verified__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Deposited_No_Documents</fullName>
        <columns>PBD__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>deposited__c</columns>
        <columns>initial_deposit_amount__c</columns>
        <columns>passport_status__c</columns>
        <columns>utility_bill_status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>deposited__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>passport_status__c</field>
            <operation>notEqual</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>utility_bill_status__c</field>
            <operation>notEqual</operation>
            <value>Approved</value>
        </filters>
        <label>Deposited No Documents</label>
        <sharedTo>
            <group>Compliance</group>
            <group>Deposit_WD</group>
            <group>Sales</group>
            <group>Sales_Team</group>
            <group>Support</group>
            <group>Support_Team</group>
            <role>BO_Operations_Manager</role>
            <role>Compliance_Operations_Manager</role>
            <role>MD</role>
            <role>Sales_Operations_Manager</role>
            <role>Support_Operations_Manager</role>
            <role>VP_BO_Compliance</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>stox_id__c</columns>
        <columns>username__c</columns>
        <columns>deposited__c</columns>
        <columns>x18_digits_Id__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
        <sharedTo>
            <group>Sales</group>
            <group>Sales_Team</group>
            <group>Support</group>
            <group>Support_Team</group>
            <role>MD</role>
            <role>Sales_Operations_Manager</role>
            <role>Sales_Rep</role>
            <role>Support_Operations_Manager</role>
            <role>Support_Rep</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Non_Deposited_Accounts_with_Docs</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>username__c</columns>
        <columns>PBD__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>deposited__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>deposited__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>utility_bill_status__c</field>
            <operation>equals</operation>
            <value>Pending,Approved</value>
        </filters>
        <filters>
            <field>passport_status__c</field>
            <operation>equals</operation>
            <value>Pending,Approved</value>
        </filters>
        <label>Non Deposited Accounts with Docs</label>
        <sharedTo>
            <role>MD</role>
            <role>Sales_Operations_Manager</role>
            <role>Sales_Rep</role>
            <role>Support_Operations_Manager</role>
            <role>Support_Rep</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <description>Business Account</description>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>